Fix the card body with multiple paragraph tags
It is visually better but there are still some glitches, not sure what is the best way to handle that kind of truncated contents from cards…

--- a/css/widget.css
+++ b/css/widget.css
@@ -48,3 +48,8 @@ button.close {
 .dataset-card {
   overflow: hidden;
 }
+.dataset-card .card-body .clamp-3 {
+  display: flex;
+  flex-direction: column;
+  min-height: 4.9em;
+}
